<resources>
    <string name="app_name">Tarea04</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="activar_rebote">Activar rebote</string>
    <string name="velocidad">Velocidad</string>
    <string name="tiempo_de_partida">Tiempo de partida</string>
    <string name="n_max_de_bolas">Nº Max de Bolas</string>
    <string name="n_de_colores">Nº de colores</string>
    <string name="btClose">Volver</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="enbolator">EnBoLaToR</string>
    <string name="comenzar">COMENZAR</string>
    <string name="rojo">ROJO</string>
    <string name="negro">NEGRO</string>
    <string name="aciertos">Aciertos</string>
    <string name="cuantas_bolas_habia_de_cada_color">Cuantas bolas habia de cada color?</string>
    <string name="azul">AZUL</string>
    <string name="amarillo">AMARILLO</string>
    <string name="verde">VERDE</string>
    <string name="colores_acertados">Colores acertados...</string>
    <string name="guardar">Guardar</string>
    <string name="p">P</string>
    <string name="embolator">EMBOLATOR</string>
    <string name="comprobar">COMPROBAR</string>
    <string name="preferencias_de_partida">Preferencias de partida:</string>
</resources>