<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"
    tools:context=".PantallaFin">

    <TextView
        android:id="@+id/TItulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/fuente2"
        android:text="@string/cuantas_bolas_habia_de_cada_color"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/fuente2"
            android:text="@string/rojo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tRojo"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/fuente2"
            android:text="@string/verde"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tVerde"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/fuente2"
            android:text="@string/azul"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tAzul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/fuente2"
            android:text="@string/amarillo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tAmarillo"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/fuente2"
            android:text="@string/negro"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tMagenta"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textAllCaps="false"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnComprobar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/fuente2"
            android:text="@string/comprobar"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tResultado"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="28dp"
            android:hint="@string/colores_acertados"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</LinearLayout>