<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainPreferencias">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="373dp"
        android:layout_height="371dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="1dp"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_weight="1"
                    android:fontFamily="@font/fuente2"
                    android:gravity="center"
                    android:text="@string/velocidad"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <Spinner
                    android:id="@+id/SpVelocidad"
                    style="@style/MaterialAlertDialog.Material3.Title.Icon"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_weight="1"
                    android:fontFamily="@font/fuente2"
                    android:gravity="center"
                    android:text="@string/tiempo_de_partida"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <Spinner
                    android:id="@+id/SpTiempo"
                    style="@style/MaterialAlertDialog.Material3.Title.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_weight="1"
                    android:fontFamily="@font/fuente2"
                    android:gravity="center"
                    android:text="@string/n_max_de_bolas"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/SpMaxBolas"
                    style="@style/MaterialAlertDialog.Material3.Title.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_weight="1"
                    android:fontFamily="@font/fuente2"
                    android:gravity="center"
                    android:text="@string/n_de_colores"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/SpNumColores"
                    style="@style/MaterialAlertDialog.Material3.Title.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <Switch
                    android:id="@+id/swRebote"
                    android:layout_width="157dp"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_weight="2"
                    android:fontFamily="@font/fuente2"
                    android:text="@string/activar_rebote"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="2" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/BtnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
</androidx.constraintlayout.widget.ConstraintLayout>